# monban

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  config.toml
config/: config.toml
crates/monban-cli/: Cargo.toml
crates/monban-cli/src/: main.rs
crates/monban-core/: Cargo.toml
crates/monban-core/src/: config.rs  deck.rs  kanji.rs  lexicon.rs  lib.rs  word.rs
crates/monban-parser/: Cargo.toml
crates/monban-parser/src/: deck.rs  lib.rs  parser.rs
crates/monban-parser/src/deck/: jlpt.rs  plain.rs  wk.rs
crates/monban-parser/src/dict/: jmdict.rs
crates/monban-parser/src/input/: epub.rs
crates/monban-service/: Cargo.toml
crates/monban-service/src/: analysis.rs  lib.rs  parsing.rs  util.rs
crates/monban-service/src/analysis/: analyzer.rs  filtering.rs
crates/monban-service/src/commands/: analyze.rs
crates/monban-service/src/integration/: anki.rs
crates/monban-service/src/parsing/: deck.rs  dict.rs  input.rs
crates/monban-service/src/parsing/deck/: anki.rs  jlpt.rs  plain.rs  wk.rs
crates/monban-service/src/parsing/dict/: jmdict.rs  jmdict_loader.rs
crates/monban-service/src/parsing/input/: epub.rs  plain.rs
crates/monban-service/src/util/: file.rs  logs.rs
data/: blacklist.txt
data/decks/: jlpt.json
data/dict/: kanji.json
ui/: eslint.config.js  index.html  package.json
ui/src/: App.jsx  AppContext.jsx  main.jsx
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/src/: commands.rs  lib.rs  main.rs
ui/src/components/layouts/: Header.jsx  Layout.jsx  Sidebar.jsx  layouts.css
ui/src/components/ui/: CoverageRing.jsx  ProgressBar.jsx  StatCard.jsx  ui.css
ui/src/pages/: pages.css
ui/src/pages/blacklist/: BlackList.jsx  BlackListRow.jsx
ui/src/pages/dashboard/: CoverageSection.jsx  Dashboard.jsx  WordList.jsx  WordRow.jsx
ui/src/pages/home/: HomePage.jsx
ui/src/pages/loading/: LoadingScreen.jsx
ui/src/styles/: common.css
ui/src/styles/themes/: dracula.css
