[workspace]
members = [
    "crates/monban-cli",
    "crates/monban-core",
    "crates/monban-service",
]
resolver = "3"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
config = "0.15"
dirs = "6.0"
epub = "2.1"
indexmap = { version="2.13", features= ["serde"] }
lindera = { version = "2.2.0", features = ["embed-ipadic"] }
scraper = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
toml = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
