[package]
name = "monban-cli"
version = "0.1.0"
edition = "2024"
default-run = "monban-cli"


[dependencies]
clap = { workspace = true }
monban-core = { path = "../monban-core/" }
monban-service = { path = "../monban-service/" }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
