[package]
name = "monban-tauri"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
anyhow = { workspace = true }
dirs = { workspace = true }
monban-core = { path = "../../crates/monban-core/" }
monban-service = { path = "../../crates/monban-service/" }
serde_json = { workspace = true }
serde = { workspace = true }
tauri = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-log = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
